# mcp-a2a-bridge

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: demo_script.py
examples/: a2a_to_mcp_basic.py  bridge.yaml  mcp_to_a2a_basic.py
src/mcp_a2a_bridge/: __init__.py  cli.py
src/mcp_a2a_bridge/a2a_to_mcp/: __init__.py  adapter.py  tool_factory.py
src/mcp_a2a_bridge/common/: __init__.py  config.py  transport.py
src/mcp_a2a_bridge/mcp_to_a2a/: __init__.py  adapter.py  agent_card.py  executor.py  tool_router.py
tests/: conftest.py  test_a2a_to_mcp.py  test_config.py  test_mcp_to_a2a.py
