[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-a2a-bridge"
version = "0.1.0"
description = "Bidirectional bridge between MCP (Model Context Protocol) and A2A (Agent-to-Agent) protocols"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Naveen Kumar Baskaran", email = "naveenkb142@gmail.com" },
]
keywords = [
    "mcp",
    "a2a",
    "agent",
    "bridge",
    "protocol",
    "model-context-protocol",
    "agent-to-agent",
    "ai-agent",
    "interoperability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "a2a-sdk>=1.0.0",
    "mcp>=1.0.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.110.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
grpc = [
    "a2a-sdk[grpc]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/mcp-a2a-bridge"
Repository = "https://github.com/naveenkumarbaskaran/mcp-a2a-bridge"
Issues = "https://github.com/naveenkumarbaskaran/mcp-a2a-bridge/issues"
Documentation = "https://github.com/naveenkumarbaskaran/mcp-a2a-bridge#readme"

[project.scripts]
mcp-a2a-bridge = "mcp_a2a_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_a2a_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
